src/objects/ERP_Reference_Data__c.object
<CustomObject>
    <description>R3v1 - This custom object holds LSO Reference Data for Accounts.</description>
    <fields>
        <fullName>Account_GUID__c</fullName>
        <description>R3 - Account GUID</description>
        <label>Account GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3v1 - Custom Lookup field to Account object to display the account reference in LSO Reference Data.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>LSO_Reference_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R3 - Customer Blocking Data Block</description>
        <inlineHelpText>If the customer is blocked NO transanctions will be allowed to be performed in local ERP.</inlineHelpText>
        <label>Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_description__c</fullName>
        <description>R3 - Block description</description>
        <inlineHelpText>Explains the reason for blocking the customer.</inlineHelpText>
        <label>Block Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_1__c</fullName>
        <description>R3 - Business 1</description>
        <inlineHelpText>Sales representative supporting the customer for business 1 (products, application). This information is local country specific.</inlineHelpText>
        <label>Business 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_2__c</fullName>
        <description>R3 - Business 2</description>
        <inlineHelpText>Sales representative supporting the customer for business 2 (products, application). This information is local country specific.</inlineHelpText>
        <label>Business 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_3__c</fullName>
        <description>R3 - Business 3</description>
        <inlineHelpText>Sales representative supporting the customer for business 3 (products, application). This information is local country specific.</inlineHelpText>
        <label>Business 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>ManualUniqueKey__c</fullName>
        <formula>Account__r.Id &amp; Text(Country__c) &amp; LBU__c &amp; LSO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ManualUniqueKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <description>R3 - Credit information - Credit limit</description>
        <inlineHelpText>Credit limit set as a result of a credit risk assessment and expected sales.</inlineHelpText>
        <label>Credit Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crif_Number__c</fullName>
        <description>R3 - Crif Number</description>
        <inlineHelpText>External DB customer unique code in order to perform the data quality cleansing activities. This information is local country specific.</inlineHelpText>
        <label>Crif Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Allocation_Text__c</fullName>
        <description>R3 Customer Allocation</description>
        <label>Customer Allocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Currency__c</fullName>
        <description>R3 - Cutom currency field</description>
        <inlineHelpText>Currency regularly used by this customer to place orders.</inlineHelpText>
        <label>Customer Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_ID__c</fullName>
        <description>R3 - ERP_Reference_Data__c</description>
        <label>ERP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Non_Buying_Account_GUID__c</fullName>
        <description>R3 - Holds the value of External Non-Buying Account GUID</description>
        <formula>Account__r.GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Non Buying Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBU__c</fullName>
        <description>R3 -LBU</description>
        <label>LBU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSODataNonBuying_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>R3 - Field used to hold the unique Data of the filed combination of Country, Division, LSO, LBU and SA.</description>
        <label>Duplicate LSO Record</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LSO_ERP_Mapping_Value__c</fullName>
        <description>R3 - Text field to hold the value of LSO from ERP Mapping table</description>
        <label>LSO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSO__c</fullName>
        <description>R3 - LSO</description>
        <label>LSO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Channel_Text__c</fullName>
        <description>R3 Local Channel</description>
        <label>Local Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Channel__c</fullName>
        <description>R3 - Local Channel</description>
        <inlineHelpText>Channel used by ABB to serve this customer. This information is local country specific.</inlineHelpText>
        <label>Local Channel</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>C - Cliente Finale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Consumer Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Enti/Utenti Finali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Golden Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Grossisti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Installatori/Quadristi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z - Intersezionali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - OEMs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy-Promozione - Studi di Progettazione</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Varie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Vendite Infrasettore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3 - Cuadristas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2 - Cuadristas CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5 - Distribución General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P6 - Integradores y EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4 - OEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1 - OEMS CD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Customer_ID__c</fullName>
        <description>R3 - Local Customer ID</description>
        <inlineHelpText>Customer unique code identifier on the country local ERP.</inlineHelpText>
        <label>Local Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Main_Business_Text__c</fullName>
        <description>R3 Local Main Business</description>
        <label>Local Main Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Main_Business__c</fullName>
        <description>R3 - Local Main Business</description>
        <inlineHelpText>Customer classification based on general application. This information is local country specific.</inlineHelpText>
        <label>Local Main Business</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>99 - All Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 -  Automazione</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 - Industriale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - Residenziale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Segment_Text__c</fullName>
        <description>R3 Local Segment</description>
        <label>Local Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Segment__c</fullName>
        <description>R3 - Local Segment</description>
        <inlineHelpText>Local customer segmentation. This information is local country specific.</inlineHelpText>
        <label>Local Segment</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>105 - Critical Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 - Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>315 - End Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>305 - Engineering Procurement and Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>310 - General Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - Industry &amp; Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 - Panel Builder and Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>115 - Renewable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP1 - Studi di progettazione</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110 - Transport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Buying_Account_Type__c</fullName>
        <description>R3 - Non_Buying_Account_Type</description>
        <inlineHelpText>Check this box to identify this non-buying account is a consultant.</inlineHelpText>
        <label>Non-Buying Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Buying Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R3 - Promotion plan</description>
        <inlineHelpText>Tick the checkbox when this account requires a  Promotion Plan. This information is local country specific.</inlineHelpText>
        <label>Promotion Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_Custom__c</fullName>
        <description>R3 - Formula field to capture Record type Name</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Sales_Person_1__c</fullName>
        <description>R3 - Reporting Sales Person 1 custom field used to capture the value from Sales Person 1.</description>
        <formula>IF( RecordType.DeveloperName = &apos;GIS_Approved_LSO_Reference_Data&apos;, Sales_Person_1__c  ,   Sales_Person_1_Manual_Entry__r.FirstName + &quot; &quot; + Sales_Person_1_Manual_Entry__r.LastName   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Sales Person 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Sales_Person_2__c</fullName>
        <description>R3 - Reporting Sales Person 2 custom field used to capture the value from Sales Person 2.</description>
        <formula>IF( RecordType.DeveloperName = &apos;GIS_Approved_LSO_Reference_Data&apos;, Sales_Person_2__c , Sales_Person_2_Manual_Entry__r.FirstName + &quot; &quot; + Sales_Person_2_Manual_Entry__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Sales Person 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Sales_Person_3__c</fullName>
        <description>R3 - Reporting Sales Person 3 custom field used to capture the value from Sales Person 3.</description>
        <formula>IF( RecordType.DeveloperName = &apos;GIS_Approved_LSO_Reference_Data&apos;, Sales_Person_3__c , Sales_Person_3_Manual_Entry__r.FirstName + &quot; &quot; + Sales_Person_3_Manual_Entry__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Sales Person 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_class__c</fullName>
        <description>R3 - Credit information Risk class</description>
        <inlineHelpText>Applicable for new customers or reactivation of blocked customers.</inlineHelpText>
        <label>Risk Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Distribution_Channel__c</fullName>
        <description>R3 - Distribution Channel</description>
        <label>SAP Distribution Channel</label>
        <picklist>
            <controllingField>SAP_Sales_Organization__c</controllingField>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Division__c</fullName>
        <description>R3v1 - To select Division values</description>
        <label>SAP Division</label>
        <picklist>
            <controllingField>SAP_Sales_Organization__c</controllingField>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Sales_Organization__c</fullName>
        <description>R3v1 - Sales Organization values</description>
        <label>SAP Sales Organization</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>0001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YY01</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_District_Text__c</fullName>
        <description>R3 Sales District</description>
        <label>Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <description>R3 - Sales District</description>
        <inlineHelpText>Geographical sales area to which the customer is associated.</inlineHelpText>
        <label>Sales District</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>034</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>036</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>059</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>038</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Text__c</fullName>
        <description>R3 Sales Office</description>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <description>R3 - Sales Office</description>
        <inlineHelpText>Commercial sales office to which the customer is associated.</inlineHelpText>
        <label>Sales Office</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>ZAPZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBN3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z521</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z803</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z621</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z221</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z951</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z961</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z873</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z531</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z901</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z806</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z511</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z631</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Person_1_Manual_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3 - Sales Person 1</description>
        <inlineHelpText>Sales representative supporting the customer for business 1 (products, application). This information is local country specific.</inlineHelpText>
        <label>Sales Person 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LSO_Reference_Data2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person_1__c</fullName>
        <description>R3 - Used to store the value of Sales Person 1  Name from Local ERP loader object</description>
        <label>Sales Person 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_2_Manual_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3 - Sales Person 2</description>
        <inlineHelpText>Sales representative supporting the customer for business 2 (products, application). This information is local country specific.</inlineHelpText>
        <label>Sales Person 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LSO_Reference_Data3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person_2__c</fullName>
        <description>R3 - Used to store the value of Sales Person 2 Name from Local ERP loader object</description>
        <label>Sales Person 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_3_Manual_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3 - Sales Person 3</description>
        <inlineHelpText>Sales representative supporting the customer for business 3 (products, application). This information is local country specific.</inlineHelpText>
        <label>Sales Person 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LSO_Reference_Data4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person_3__c</fullName>
        <description>R3 - Used to store the value of Sales Person 3 Name from Local ERP loader object</description>
        <label>Sales Person 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R3 - Sales Plan</description>
        <inlineHelpText>Tick the checkbox when this account requires a Sales Plan. This information is a local classification.</inlineHelpText>
        <label>Sales Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3 - Technical Promoter</description>
        <inlineHelpText>ABB employee in charge to provide technical support to   consultants at an early stage in order to have ABB offering specified into their projects, building a competitive advantage. This information is local country specific.</inlineHelpText>
        <label>Technical Promoter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LSO_Reference_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3 - Technical support</description>
        <inlineHelpText>ABB employee in charge to provide technical support to the customer. This information is local country specific.</inlineHelpText>
        <label>Technical Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LSO_Reference_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Sales_Resources_Text__c</fullName>
        <description>R3 Type of Sales Resources</description>
        <label>Type of Sales Resources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>